⚰️ 프로젝트 하나로 합치기

--- a/DataStructureAlgorithm/DataStructeAlgorithm/DataStructeAlgorithm.vcxproj.filters
+++ b/DataStructureAlgorithm/DataStructeAlgorithm/DataStructeAlgorithm.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="DataStructureAlgorithm.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="DynamicArray.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="DynamicArray2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
